# VoxelGame

./: Cargo.toml
assets/: Dirt.aseprite  Error.aseprite  Stone.aseprite
src/: atlas.rs  blocks.rs  camera_control.rs  chunk.rs  game.rs  level.rs  main.rs  meshing.rs  textures.rs
src/block/: mod.rs
src/chunk/: mesh.rs  mod.rs
src/level/: mod.rs
