[package]
name = "voxel_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy_asset_loader = "0.23.0"
noiz = "0.2.0"
serde = "1.0.219"
serde_json = "1.0.143"
serde_with = "3.14.0"

[profile.dev]
opt-level = 1

[profile.bench.package."*"]
opt-level = 3
